# hacker-slacker-flask

./: .gitignore  README.rst  pyproject.toml
app/: routes.py
app/static/: home.css
app/templates/: home.html.jinja  layout.html.jinja  navigation.html.jinja
tests/: test_app.py
